docs: #14 - Improved help texts to be more uniform. Updated template configuration file. Removed default mode "aws" which is useless in case of an openstack profile jar.

--- a/misc/README
+++ b/misc/README
@@ -1,3 +1,5 @@
 Run ./bibigrid --help for usage details.
 
-See https://wiki.cebitec.uni-bielefeld.de/bibiserv/index.php/BiBiGrid for more information.
+See https://github.com/BiBiServ/bibigrid/docs for more information.
+
+The legacy documentation can be found at https://wiki.cebitec.uni-bielefeld.de/bibiserv/index.php/BiBiGrid.
